--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "express": "^4.17.2",
     "mongodb": "^4.3.1",
     "node-emoji": "^1.11.0",
+    "node-fetch": "^3.2.0",
     "sharp": "^0.29.3"
   }
 }
